tests/ui/impl-restriction/trait-alias-cannot-be-impl-restricted.without_gate.stderr
error: trait aliases cannot be `impl`-restricted
  --> $DIR/trait-alias-cannot-be-impl-restricted.rs:7:1
   |
LL | impl(crate) trait Alias = Copy;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ trait aliases cannot be `impl`-restricted

error: trait aliases cannot be `auto`
  --> $DIR/trait-alias-cannot-be-impl-restricted.rs:9:1
   |
LL | auto impl(in crate) trait AutoAlias = Copy;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ trait aliases cannot be `auto`

error: trait aliases cannot be `impl`-restricted
  --> $DIR/trait-alias-cannot-be-impl-restricted.rs:9:1
   |
LL | auto impl(in crate) trait AutoAlias = Copy;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ trait aliases cannot be `impl`-restricted

error: trait aliases cannot be `unsafe`
  --> $DIR/trait-alias-cannot-be-impl-restricted.rs:12:1
   |
LL | unsafe impl(self) trait UnsafeAlias = Copy;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ trait aliases cannot be `unsafe`

error: trait aliases cannot be `impl`-restricted
  --> $DIR/trait-alias-cannot-be-impl-restricted.rs:12:1
   |
LL | unsafe impl(self) trait UnsafeAlias = Copy;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ trait aliases cannot be `impl`-restricted

error: trait aliases cannot be `impl`-restricted
  --> $DIR/trait-alias-cannot-be-impl-restricted.rs:15:1
   |
LL | const impl(in self) trait ConstAlias = Copy;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ trait aliases cannot be `impl`-restricted

error: trait aliases cannot be `impl`-restricted
  --> $DIR/trait-alias-cannot-be-impl-restricted.rs:19:5
   |
LL |     impl(super) trait InnerAlias = Copy;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ trait aliases cannot be `impl`-restricted

error: trait aliases cannot be `unsafe`
  --> $DIR/trait-alias-cannot-be-impl-restricted.rs:21:5
   |
LL |     const unsafe impl(in crate::foo) trait InnerConstUnsafeAlias = Copy;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ trait aliases cannot be `unsafe`

error: trait aliases cannot be `impl`-restricted
  --> $DIR/trait-alias-cannot-be-impl-restricted.rs:21:5
   |
LL |     const unsafe impl(in crate::foo) trait InnerConstUnsafeAlias = Copy;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ trait aliases cannot be `impl`-restricted

error: trait aliases cannot be `auto`
  --> $DIR/trait-alias-cannot-be-impl-restricted.rs:24:5
   |
LL |     unsafe auto impl(in crate::foo) trait InnerUnsafeAutoAlias = Copy;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ trait aliases cannot be `auto`

error: trait aliases cannot be `unsafe`
  --> $DIR/trait-alias-cannot-be-impl-restricted.rs:24:5
   |
LL |     unsafe auto impl(in crate::foo) trait InnerUnsafeAutoAlias = Copy;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ trait aliases cannot be `unsafe`

error: trait aliases cannot be `impl`-restricted
  --> $DIR/trait-alias-cannot-be-impl-restricted.rs:24:5
   |
LL |     unsafe auto impl(in crate::foo) trait InnerUnsafeAutoAlias = Copy;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ trait aliases cannot be `impl`-restricted

error[E0658]: `impl` restrictions are experimental
  --> $DIR/trait-alias-cannot-be-impl-restricted.rs:7:1
   |
LL | impl(crate) trait Alias = Copy;
   | ^^^^^^^^^^^
   |
   = note: see issue #105077 <https://github.com/rust-lang/rust/issues/105077> for more information
   = help: add `#![feature(impl_restriction)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `impl` restrictions are experimental
  --> $DIR/trait-alias-cannot-be-impl-restricted.rs:9:6
   |
LL | auto impl(in crate) trait AutoAlias = Copy;
   |      ^^^^^^^^^^^^^^
   |
   = note: see issue #105077 <https://github.com/rust-lang/rust/issues/105077> for more information
   = help: add `#![feature(impl_restriction)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `impl` restrictions are experimental
  --> $DIR/trait-alias-cannot-be-impl-restricted.rs:12:8
   |
LL | unsafe impl(self) trait UnsafeAlias = Copy;
   |        ^^^^^^^^^^
   |
   = note: see issue #105077 <https://github.com/rust-lang/rust/issues/105077> for more information
   = help: add `#![feature(impl_restriction)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `impl` restrictions are experimental
  --> $DIR/trait-alias-cannot-be-impl-restricted.rs:15:7
   |
LL | const impl(in self) trait ConstAlias = Copy;
   |       ^^^^^^^^^^^^^
   |
   = note: see issue #105077 <https://github.com/rust-lang/rust/issues/105077> for more information
   = help: add `#![feature(impl_restriction)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `impl` restrictions are experimental
  --> $DIR/trait-alias-cannot-be-impl-restricted.rs:19:5
   |
LL |     impl(super) trait InnerAlias = Copy;
   |     ^^^^^^^^^^^
   |
   = note: see issue #105077 <https://github.com/rust-lang/rust/issues/105077> for more information
   = help: add `#![feature(impl_restriction)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `impl` restrictions are experimental
  --> $DIR/trait-alias-cannot-be-impl-restricted.rs:21:18
   |
LL |     const unsafe impl(in crate::foo) trait InnerConstUnsafeAlias = Copy;
   |                  ^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #105077 <https://github.com/rust-lang/rust/issues/105077> for more information
   = help: add `#![feature(impl_restriction)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `impl` restrictions are experimental
  --> $DIR/trait-alias-cannot-be-impl-restricted.rs:24:17
   |
LL |     unsafe auto impl(in crate::foo) trait InnerUnsafeAutoAlias = Copy;
   |                 ^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #105077 <https://github.com/rust-lang/rust/issues/105077> for more information
   = help: add `#![feature(impl_restriction)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 19 previous errors

For more information about this error, try `rustc --explain E0658`.
